[package]
name = "flat_enum"
version = "0.1.0"
edition = "2021"
description = "Expand nested enum into flattened enum"
license = "MIT"
keywords = ["macros"]
categories = ["data-structure"]
repository = "https://github.com/yasuo-ozu/flat_enum"

[lib]
path = "lib.rs"

[dependencies]
flat_enum_macro = { path = "macro", version = "0.1.0" }

[dev-dependencies]
test_flat_enum = { path = "tests/test_flat_enum", version = "0.1.0" }

[workspace]

members = [
	"macro",
	"tests/test_flat_enum",
]

resolver = "2"
