[package]
name = "flat_enum"
version = "0.1.1"
edition = "2021"
description = "Expand nested enum into flattened enum"
license = "MIT"
keywords = ["macros"]
categories = ["data-structures"]
repository = "https://github.com/yasuo-ozu/flat_enum"

[features]
testing = []

[lib]
path = "lib.rs"

[dependencies]
flat_enum_macro = { path = "macro", version = "0.1.1" }

[workspace]

members = ["macro", "testing"]

resolver = "2"
