[package]
name = "flat_enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flat_enum_macro = { path = "../flat_enum_macro", version = "0.1.0" }

[dev-dependencies]
test_flat_enum = { path = "../test_flat_enum", version = "0.1.0" }
