[package]
name = "flat_enum_macro"
version = "0.1.0"
edition = "2021"
description = "Expand nested enum into flattened enum"
license = "MIT"
keywords = ["macros"]
categories = ["data-structure"]
repository = "https://github.com/yasuo-ozu/flat_enum"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
template-quote = "0.3.1"
proc-macro-error = "1.0"
derive-syn-parse = "0.1.5"

[dependencies.syn]
version = "1.0"
features = [ "full", "derive", "printing", "extra-traits"]
