[package]
name = "test_flat_enum"
version = "0.1.0"
edition = "2021"
description = "Expand nested enum into flattened enum"
license = "MIT"
keywords = ["macros"]
categories = ["data-structure"]
repository = "https://github.com/yasuo-ozu/flat_enum"
publish = false

[lib]
path = "lib.rs"

[dev-dependencies]
flat_enum = { features = ["testing"], path = "..", version = "0.1.0" }
